--- a/src/Components/ContactComponent/ContactComponent.css
+++ b/src/Components/ContactComponent/ContactComponent.css
@@ -1,104 +1,111 @@
 #troo-da-get-in-touch-section {
-    padding-bottom: 100px;
-    position: relative;
+  padding-bottom: 100px;
+  position: relative;
 }
 .arrow-icon {
-    animation: pulse 3s ease-out;
-    animation-iteration-count: infinite;
-    position: absolute;
-    left: 10%;
-    top: 36%;
+  animation: pulse 3s ease-out;
+  animation-iteration-count: infinite;
+  position: absolute;
+  left: 10%;
+  top: 36%;
 }
 #troo-da-get-in-touch-section:after {
-    background: #F8F9FF;
-    border-radius: 5px;
-    content: "";
-    width: 100%;
-    height: 76%;
-    position: absolute;
-    top: 24%;
-    z-index: -9;
+  background: #f8f9ff;
+  border-radius: 5px;
+  content: "";
+  width: 100%;
+  height: 76%;
+  position: absolute;
+  top: 24%;
+  z-index: -9;
 }
 .get-in-touch-img {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 .get-in-touch-img img {
-    width: 100%;
+  width: 100%;
 }
 #troo-da-get-in-touch-section .sub-tile-con {
-    margin-bottom: 26px;
+  margin-bottom: 26px;
 }
 #troo-da-get-in-touch-section .fomr-tile {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 27px;
-    color: #171717;
-    margin-bottom: 17px;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  color: #171717;
+  margin-bottom: 17px;
 }
 .fome-section .field {
-    position: relative;
+  position: relative;
 }
 .fome-section input {
-    border-bottom: 1px solid rgba(23, 23, 23, 0.2);
-    border-left: 0;
-    border-right: 0;
-    border-top: 0;
-    border-radius: 0;
-    height: auto;
-    background: transparent;
+  border-bottom: 1px solid rgba(23, 23, 23, 0.2);
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  border-radius: 0;
+  height: auto;
+  background: transparent;
 }
 .form-control:focus {
-    color: #212529;
-    background-color: transparent !important;
-    border-color: #1AB69D !important;
-    outline: 0;
-    box-shadow: none !important;
+  color: #212529;
+  background-color: transparent !important;
+  border-color: #1ab69d !important;
+  outline: 0;
+  box-shadow: none !important;
 }
 input:focus + label {
-    transform: translateY(-16px);
-    font-size: 15px;
+  transform: translateY(-16px);
+  font-size: 15px;
 }
 .fome-section label {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #171717;
-    position: absolute;
-    margin-bottom: 0;
-    order: -1;
-    padding-left: 5px;
-    transition: all 0.3s ease;
-    transform: translateY(0px);
-    pointer-events: none;
-    top: 0;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #171717;
+  position: absolute;
+  margin-bottom: 0;
+  order: -1;
+  padding-left: 5px;
+  transition: all 0.3s ease;
+  transform: translateY(0px);
+  pointer-events: none;
+  top: 0;
 }
 .fome-section textarea {
-    border-bottom: 1px solid rgba(23, 23, 23, 0.2);
-    border-left: 0;
-    border-right: 0;
-    border-top: 0;
-    border-radius: 0;
-    height: 35px;
-    min-height: unset !important;
-    background: transparent;
+  border-bottom: 1px solid rgba(23, 23, 23, 0.2);
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  border-radius: 0;
+  height: 35px;
+  min-height: unset !important;
+  background: transparent;
 }
 #troo-da-get-in-touch-section .fome-section button.btnn.btn-lg {
-    padding: 13px 49px;
-    margin-top: 50px;
-    border-radius: 5px;
+  padding: 13px 49px;
+  margin-top: 50px;
+  border-radius: 5px;
 }
 .fome-section button.btnn.btn-lg:hover {
-    color: #fff;
-    border: 1px solid #1AB69D;
-    background-color: #1AB69D;
+  color: #fff;
+  border: 1px solid #1ab69d;
+  background-color: #1ab69d;
 }
 
-@media (max-width: 1420px){
-    .arrow-icon{
-        display: none;
-    }
+@media (max-width: 1420px) {
+  .arrow-icon {
+    display: none;
+  }
+}
+
+@media (max-width: 1024px) {
+  #troo-da-get-in-touch-section h2 {
+    font-size: 30px;
+  }
+  
 }
