--- a/src/Components/FetureComponent/FetureComponent.css
+++ b/src/Components/FetureComponent/FetureComponent.css
@@ -261,3 +261,63 @@ body h2 {
     display: none;
   }
 }
+
+@media (max-width: 1160px) {
+  .more-course {
+    background: #ffffff;
+    border: 1px solid rgba(26, 182, 157, 0.1);
+    box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
+    border-radius: 50%;
+    text-align: center;
+    padding: 76px 41px;
+    margin-left: 69px;
+  }
+  .feat-text {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .loader-ss {
+    display: none;
+  }
+  .course-features .btn.btn-lg {
+    padding: 14px 20px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .feat-text {
+    padding-left: 14px;
+    padding-bottom: 30px;
+    padding-right: 0;
+  }
+  .more-course {
+    margin-left: 0;
+    padding: 50px 41px;
+  }
+  .feat-text h4 {
+    transition: 0.5s;
+    font-size: 19px;
+    line-height: 25px;
+  }
+  .feat-text p {
+    margin-top: 0;
+  }
+  .client-col {
+    display: flex;
+    margin-top: 18px;
+  }
+  body h2 {
+    font-size: 25px;
+    line-height: 40px;
+  }
+}
+
+@media (max-width: 991px) {
+  .feat-text svg {
+    font-size: 12px;
+  }
+  .feat-text {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
