--- a/src/Components/HeroComponent/HeroGlobal.css
+++ b/src/Components/HeroComponent/HeroGlobal.css
@@ -1,48 +1,54 @@
 .sub-page #troo-da-hero-section {
-    padding: 149px 0;
-    position: relative;
-    background: #EFF2FD;
+  padding: 149px 0;
+  position: relative;
+  background: #eff2fd;
 }
 .sub-page #troo-da-hero-section:after {
-    background: #3556BF;
-    opacity: 0.05;
-    filter: blur(50px);
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    width: 526px;
-    height: 526px;
-    right: 15%;
-    bottom: 0;
+  background: #3556bf;
+  opacity: 0.05;
+  filter: blur(50px);
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  width: 526px;
+  height: 526px;
+  right: 15%;
+  bottom: 0;
 }
 .sub-page .left-img-col .vert-move {
-    left: inherit;
-    right: -12%;
-    top: 226px;
-    z-index: -9;
+  left: inherit;
+  right: -12%;
+  top: 226px;
+  z-index: -9;
 }
 .sub-page-title {
-    text-align: center;
-    position: relative;
-    z-index: 99;
+  text-align: center;
+  position: relative;
+  z-index: 99;
 }
 .sub-page ul.breadcrumb {
-    background: #FFFFFF;
-    border: 1px solid rgba(53, 86, 191, 0.2);
-    box-shadow: 0px 8px 15px rgba(149, 157, 165, 0.1);
-    display: inline-flex;
-    margin-bottom: 19px;
-    padding: 12px 93px;
+  background: #ffffff;
+  border: 1px solid rgba(53, 86, 191, 0.2);
+  box-shadow: 0px 8px 15px rgba(149, 157, 165, 0.1);
+  display: inline-flex;
+  margin-bottom: 19px;
+  padding: 12px 93px;
 }
 ul.breadcrumb li a {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-    text-align: center;
-    color: #171717;
-    text-decoration: none;
-    padding: 0 10px 0 10px;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  color: #171717;
+  text-decoration: none;
+  padding: 0 10px 0 10px;
+}
+
+@media (max-width: 991px) {
+  .sub-page #troo-da-hero-section {
+    padding: 100px 0 100px 0;
+  }
 }
